--- a/Services.css
+++ b/Services.css
@@ -7,8 +7,8 @@
 }
 
 .u-section-1 .u-text-1 {
-  font-size: 3rem;
-  font-weight: 500;
+  font-size: 1.875rem;
+  font-weight: normal;
   margin: 47px auto 0;
 }
 
@@ -307,11 +307,12 @@
   }
 
   .u-section-1 .u-text-1 {
-    font-size: 1.5rem;
+    font-size: 2.25rem;
+    font-weight: 500;
   }
 
   .u-section-1 .u-text-2 {
-    width: 340px;
+    width: auto;
   }
 
   .u-section-1 .u-list-1 {
@@ -341,326 +342,101 @@
     margin-right: initial;
     margin-left: initial;
   }
-}.u-section-2 .u-sheet-1 {
-  min-height: 175px;
+} .u-section-2 {
+  background-image: none;
+}
+
+.u-section-2 .u-sheet-1 {
+  min-height: 668px;
 }
 
 .u-section-2 .u-text-1 {
   font-size: 3rem;
   font-weight: 500;
-  width: 199px;
-  margin: 35px auto 0;
+  margin: 45px auto 0 390px;
 }
 
 .u-section-2 .u-text-2 {
   font-size: 1rem;
   font-weight: normal;
-  margin: 12px auto 52px;
-}
-
-@media (max-width: 1199px) {
-  .u-section-2 .u-text-2 {
-    width: 254px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-2 .u-text-1 {
-    font-size: 1.5rem;
-  }
-} .u-section-3 {
-  background-image: none;
-}
-
-.u-section-3 .u-sheet-1 {
-  min-height: 655px;
-}
-
-.u-section-3 .u-list-1 {
-  grid-template-rows: auto;
-  margin-top: 103px;
-  margin-bottom: 32px;
-}
-
-.u-section-3 .u-repeater-1 {
-  grid-template-columns: calc(33.3333% - 6.66667px) calc(33.3333% - 6.66667px) calc(33.3333% - 6.66667px);
-  grid-gap: 10px 10px;
-  min-height: 520px;
-}
-
-.u-section-3 .u-container-layout-1 {
-  padding: 30px;
-}
-
-.u-section-3 .u-image-1 {
-  height: 360px;
-  margin: 0 auto 0 0;
-}
-
-.u-section-3 .u-text-1 {
-  font-weight: 700;
-  font-size: 1.5rem;
-  margin: 15px 0 0;
-}
-
-.u-section-3 .u-text-2 {
-  font-size: 1.25rem;
-  margin: 25px 0 0;
-}
-
-.u-section-3 .u-container-layout-2 {
-  padding: 30px;
-}
-
-.u-section-3 .u-image-2 {
-  height: 360px;
-  margin: 0 auto 0 0;
-}
-
-.u-section-3 .u-text-3 {
-  font-weight: 700;
-  font-size: 1.5rem;
-  margin: 15px 0 0;
-}
-
-.u-section-3 .u-text-4 {
-  font-size: 1.25rem;
-  margin: 25px 0 0;
-}
-
-.u-section-3 .u-container-layout-3 {
-  padding: 30px;
-}
-
-.u-section-3 .u-image-3 {
-  height: 360px;
-  margin: 0 auto 0 0;
-}
-
-.u-section-3 .u-text-5 {
-  font-weight: 700;
-  font-size: 1.5rem;
-  margin: 15px 0 0;
-}
-
-.u-section-3 .u-text-6 {
-  font-size: 1.25rem;
-  margin: 25px 0 0;
-}
-
-.u-section-3 .u-btn-1 {
-  background-image: none;
-  padding: 0;
-}
-
-@media (max-width: 1199px) {
-  .u-section-3 .u-list-1 {
-    height: auto;
-  }
-
-  .u-section-3 .u-repeater-1 {
-    min-height: 509px;
-  }
-
-  .u-section-3 .u-image-1 {
-    height: 285px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-3 .u-image-2 {
-    height: 285px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-3 .u-image-3 {
-    height: 285px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-3 .u-repeater-1 {
-    grid-template-columns: calc(50% - 5px) calc(50% - 5px);
-  }
-
-  .u-section-3 .u-image-1 {
-    height: 338px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-3 .u-image-2 {
-    height: 338px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-3 .u-image-3 {
-    height: 338px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-3 .u-repeater-1 {
-    grid-template-columns: 100%;
-  }
-
-  .u-section-3 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-3 .u-image-1 {
-    height: 586px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-3 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-3 .u-image-2 {
-    height: 586px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-3 .u-container-layout-3 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-3 .u-image-3 {
-    height: 586px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-3 .u-list-1 {
-    margin-top: 62px;
-  }
-
-  .u-section-3 .u-image-1 {
-    height: 361px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-3 .u-image-2 {
-    height: 361px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-3 .u-image-3 {
-    height: 361px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-} .u-section-4 {
-  background-image: none;
-}
-
-.u-section-4 .u-sheet-1 {
-  min-height: 668px;
-}
-
-.u-section-4 .u-text-1 {
-  font-size: 3rem;
-  font-weight: 500;
-  margin: 45px auto 0 390px;
-}
-
-.u-section-4 .u-text-2 {
-  font-size: 1rem;
-  font-weight: normal;
   margin: 32px 268px 0 216px;
 }
 
-.u-section-4 .u-btn-1 {
+.u-section-2 .u-btn-1 {
   background-image: none;
   padding: 0;
 }
 
-.u-section-4 .u-form-1 {
+.u-section-2 .u-form-1 {
   background-image: none;
   height: 357px;
   margin: 55px 311px 46px 259px;
 }
 
-.u-section-4 .u-input-1 {
+.u-section-2 .u-input-1 {
   text-transform: uppercase;
 }
 
-.u-section-4 .u-input-2 {
+.u-section-2 .u-input-2 {
   text-transform: uppercase;
 }
 
-.u-section-4 .u-input-3 {
+.u-section-2 .u-input-3 {
   text-transform: uppercase;
 }
 
-.u-section-4 .u-btn-2 {
+.u-section-2 .u-btn-2 {
   background-image: none;
   text-transform: uppercase;
   letter-spacing: 2px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-4 .u-text-1 {
+  .u-section-2 .u-text-1 {
     margin-left: 322px;
   }
 
-  .u-section-4 .u-text-2 {
+  .u-section-2 .u-text-2 {
     margin-right: 168px;
   }
 
-  .u-section-4 .u-form-1 {
+  .u-section-2 .u-form-1 {
     width: 570px;
     margin-left: 159px;
     margin-right: 211px;
   }
 
-  .u-section-4 .u-btn-2 {
+  .u-section-2 .u-btn-2 {
     border-style: solid;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-4 .u-text-1 {
+  .u-section-2 .u-text-1 {
     margin-left: 247px;
   }
 
-  .u-section-4 .u-text-2 {
+  .u-section-2 .u-text-2 {
     margin-right: 58px;
   }
 
-  .u-section-4 .u-form-1 {
+  .u-section-2 .u-form-1 {
     margin-left: 49px;
     margin-right: 101px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-4 .u-text-1 {
+  .u-section-2 .u-text-1 {
     margin-left: 185px;
   }
 
-  .u-section-4 .u-text-2 {
+  .u-section-2 .u-text-2 {
     margin-right: 0;
     margin-left: 162px;
   }
 
-  .u-section-4 .u-form-1 {
+  .u-section-2 .u-form-1 {
     width: 540px;
     margin-left: 0;
     margin-right: 0;
@@ -668,18 +444,18 @@
 }
 
 @media (max-width: 575px) {
-  .u-section-4 .u-text-1 {
-    font-size: 1.5rem;
+  .u-section-2 .u-text-1 {
+    font-size: 2.25rem;
     margin-left: auto;
   }
 
-  .u-section-4 .u-text-2 {
+  .u-section-2 .u-text-2 {
     width: 238px;
     margin-left: auto;
     margin-right: auto;
   }
 
-  .u-section-4 .u-form-1 {
+  .u-section-2 .u-form-1 {
     width: 340px;
   }
 }
